// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 component renders unchanged 1`] = `
<h1
  className=""
>
  Hello World
</h1>
`;

exports[`H2 component renders unchanged 1`] = `
<h2
  className=""
>
  Hello World
</h2>
`;

exports[`H3 component renders unchanged 1`] = `
<h3
  className=""
>
  Hello World
</h3>
`;

exports[`H4 component renders unchanged 1`] = `
<h4
  className=""
>
  Hello World
</h4>
`;

exports[`H5 component renders unchanged 1`] = `
<h5
  className=""
>
  Hello World
</h5>
`;

exports[`H6 component renders unchanged 1`] = `
<h6
  className=""
>
  Hello World
</h6>
`;

exports[`P component renders unchanged 1`] = `
<p
  className=""
>
  Hello World
</p>
`;
